--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         .hero-gradient {
             background: linear-gradient(rgba(15, 23, 42, 0.8), rgba(15, 23, 42, 0.8)), 
-                        url('https://images.unsplash.com/photo-1504307651254-35680f356dfd?auto=format&fit=crop&q=80&w=2000');
+                        url('IMG-20260210-WA0013.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -85,7 +85,7 @@
             <a href="#home" class="block py-2 text-slate-600">Home</a>
             <a href="#services" class="block py-2 text-slate-600">Services</a>
             <a href="#gallery" class="block py-2 text-slate-600">Team in Action</a>
-            <a href="#contact" class="bg-blue-700 text-white px-6 py-2 rounded-full font-semibold hover:bg-blue-800 transition">Get a Quote</a>
+            <a href="#contact" class="block py-2 text-blue-700 font-bold">Get a Quote</a>
         </div>
     </nav>
 
@@ -374,7 +374,7 @@
                             </div>
                             <div>
                                 <label class="block text-sm font-semibold text-slate-700 mb-2">Phone Number</label>
-                                <input type="tel" id="form-phone" required class="w-full px-4 py-3 rounded-lg border border-slate-200 focus:ring-2 focus:ring-blue-600 focus:border-transparent outline-none transition" placeholder="07XXXXXXXX">
+                                <input type="tel" id="form-phone" required class="w-full px-4 py-3 rounded-lg border border-slate-200 focus:ring-2 focus:ring-blue-600 focus:border-transparent outline-none transition" placeholder="256XXXXXXXX">
                             </div>
                         </div>
                         <div>
