--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="flex justify-between h-20 items-center">
                 <div class="flex-shrink-0 flex items-center">
                     <span class="text-2xl font-bold text-blue-700 tracking-tight">ERISCO</span>
-                    <span class="ml-2 text-sm font-medium text-slate-500 hidden sm:block uppercase tracking-widest">Contractor U Ltd</span>
+                    <span class="ml-2 text-sm font-medium text-slate-500 sm:block uppercase tracking-widest">Contractor U Ltd</span>
                 </div>
                 <div class="hidden md:flex space-x-8 items-center">
                     <a href="#home" class="text-slate-600 hover:text-blue-700 font-medium">Home</a>
