Updated About Us again

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 
                 <div class="relative">
-                    <div class="aspect-square bg-blue-50 rounded-2xl overflow-hidden">
+                    <div class="gallery-item group">
                         <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1000" 
                              alt="About Erisco" 
                              class="w-full h-full object-cover mix-blend-multiply opacity-80">
