Updated About Us again

--- a/index.html
+++ b/index.html
@@ -236,8 +236,9 @@
                 <div class="relative">
                     <div class="gallery-item group">
                         <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1000" 
-                             alt="About Erisco" 
-                             class="w-full h-full object-cover mix-blend-multiply opacity-80">
+                        alt="Eric Were, Erisco Contractor U Ltd" 
+                        width="150" height="150" style="float: left; margin-right: 10px; margin-bottom: 0px"/>
+                        <p class="text-left">
                     </div>
                 
     
