--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 
      <!-- 3-About Us Section -->
      <section id="about" class="py-24 bg-white">
-        <h3 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">About Us</h3>
-                    <div class="w-20 h-1 bg-blue-600 mb-8 rounded-full"></div>
+        <center><h3 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">About Us</h3>
+                    <div class="w-20 h-1 bg-blue-600 mb-8 rounded-full"></div></center>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 
