--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     
             <div class="text-lg text-slate-600 leading-relaxed">
                 
-                <div class="float-left mr-6 mb-4 w-40 h-40 md:w-64 md:h-64 rounded-2xl overflow-hidden shadow-lg border-4 border-slate-50">
+                <div class="float-left mr-6 mb-2 w-24 h-24 md:w-48 md:h-48 rounded-xl overflow-hidden shadow-md border-2 border-slate-50">
                     <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1000" 
                          alt="About Erisco" 
                          class="w-full h-full object-cover">
