--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     
             <div class="text-lg text-slate-600 leading-relaxed">
                 
-                <div class="float-left mr-8 mb-4 w-32 h-32 md:w-56 md:h-56 rounded-2xl overflow-hidden shadow-lg border-2 border-slate-100">
+                <div class="float-left mr-8 mb-4 w-48 h-64 md:w-96 md:h-[500px] rounded-2xl overflow-hidden shadow-xl border-2 border-slate-50">
                     <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1000" 
                          alt="About Erisco" 
                          class="w-full h-full object-cover">
