--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <a href="#home" class="block py-2 text-slate-600">Home</a>
             <a href="#services" class="block py-2 text-slate-600">Services</a>
             <a href="#gallery" class="block py-2 text-slate-600">Team in Action</a>
-            <a href="#about" class="text-slate-600 hover:text-blue-700 font-medium transition-colors">About Us</a>
+            <a href="#about" class="block py-2 text-slate-600">About Us</a>
             <a href="#contact" class="block py-2 text-blue-700 font-bold">Get a Quote</a>
         </div>
     </nav>
