Updated index file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erisco Contractor U LTD | General Contracting & Maintenance</title>
+    <meta name="keywords" content="Eric Were, Eric David Were, Were David Eric, ERISCO, ERISCO Plumbers, Erisco, Erisco Contractor U LTD, Plumbing, Electrical, Installation, ERISCO Contractor U LTD, Fire Systems, Structure, Roofing, Finishing, Exterior, Maintenance Services, General Contracting & Maintenance, General Contracting, Maintenance, Services, Uganda">
+
+    <title>Erisco Contractor U LTD</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
