added images folder

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Row 1 -->
                 <div class="gallery-item group">
-                    <img src="IMG-20260210-WA0014.jpg">
+                    <img src="images/IMG-20260210-WA0014.jpg">
                  
                 </div>
                 <div class="gallery-item group">
