--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         .hero-gradient {
             background: linear-gradient(rgba(15, 23, 42, 0.8), rgba(15, 23, 42, 0.8)), 
-                        url('IMG-20260210-WA0013.jpg');
+                        url('images/IMG-20260210-WA0013.jpg');
             background-size: cover;
             background-position: center;
         }
