--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 </div>
                    <!-- Row 5 -->
                    <div class="gallery-item group">
-                    <img src="IMG-20260210-WA0007.jpg">
+                    <img src="images/IMG-20260210-WA0007.jpg">
                  
                 </div>
                 <div class="gallery-item group">
