updated About Us file

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 </div>
     
                 <p class="mb-6">
-                    Founded by Eric Were, Erisco Contractor U Ltd began with a simple mission: to provide the highest standard of plumbing and maintenance services in the region. With over 15 years of hands-on experience, Eric has grown the company from a specialized plumbing outfit into a multi-disciplinary contracting powerhouse.
+                    Founded by Eric Were, Erisco Contractor U Ltd began with a simple mission: to provide the highest standard of plumbing and maintenance services in Uganda. With over 15 years of hands-on experience, Eric has grown the company from a specialized plumbing outfit into a multi-disciplinary contracting powerhouse.
                 </p>
                 
                 <p>
